İş emri ve üretim=>index düzenlemesi yapıldı

--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -2461,8 +2461,12 @@
                                         if (refadet == "-") {
                                             refadet = 0;
                                         }
+                                        var agirlik = Math.round(refagirlik / adet).toString();
+                                        //if (sonrefisemri.substring(0, 2) == 'SM') {
+                                        //    agirlik = refadet
+                                        //}
                                         DLList.push({
-                                            GIRDI1: urunkodu, GIRDI2: girdi2, ISEMRINO: sonisemri, STOKADI: stokadi, KALINLIK: kalinlik, KALITE: kalite, KAPLAMA: kaplama, GENISLIK: genislik.replace(',', '.'), ADET: 1, REF_ISEMRINO: sonrefisemri, REF_STOKOLCUSU: refstokolcusu, REF_ADET: refadet, AGIRLIK: Math.round(refagirlik / adet).toString(), SIPKONT: "", SIPARISNO: "", HAMORAN: hamor, TAMAGIRLIK: tam, ORAN: oran, "MIKTAR_SABITLE": tamMi,FIRE:fire
+                                            GIRDI1: urunkodu, GIRDI2: girdi2, ISEMRINO: sonisemri, STOKADI: stokadi, KALINLIK: kalinlik, KALITE: kalite, KAPLAMA: kaplama, GENISLIK: genislik.replace(',', '.'), ADET: 1, REF_ISEMRINO: sonrefisemri, REF_STOKOLCUSU: refstokolcusu, REF_ADET: refadet, AGIRLIK:agirlik , SIPKONT: "", SIPARISNO: "", HAMORAN: hamor, TAMAGIRLIK: tam, ORAN: oran, "MIKTAR_SABITLE": tamMi,FIRE:fire
                                         });
 
                                         if (!(serilist.includes(girdi2)) && (girdi2 != "-")) {
