--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_HazırListe.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_HazırListe.cshtml
@@ -87,7 +87,7 @@
             },
             success: (response) => {
                 //HazırListe = response.filter(x => !Kalemler.map(y => y.INCKEY).includes(x.INCKEY) && x.GIRIS_DEPO == GirisDepo);
-                HazırListe = response.filter(x => !Kalemler.map(y => y.INCKEY).includes(x.INCKEY) && (x.GIRIS_DEPO == GirisDepo || x.GIRIS_DEPO == null));
+                HazırListe = response.filter(x => !Kalemler.map(y => y.INCKEY).includes(x.INCKEY));
             }
         })
         .then(() => {
