--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
@@ -1136,7 +1136,7 @@
                             }, Object.create(null));
 
                             MiktarKontrol(StokToplamlari, HataListesi).then(() => {
-                                if (HataListesi.length > 0) {
+                                if (false) {
                                     var HataMesaji = '<div style="overflow-y:auto;height:150px;font-size:smaller;margin-bottom:1rem;">';
 
                                     for (var i = 0; i < HataListesi.length; i++) {
